# forc-telemetry

./: Cargo.toml
src/: collector.rs  config.rs  lib.rs  main.rs  supervisor.rs
src/collector/: system_info.rs
